--- a/index.html
+++ b/index.html
@@ -13,10 +13,26 @@
       crossorigin="anonymous"
     />
 
-    <title>Hello, world!</title>
+    <title>Bootstrap Freelancer</title>
   </head>
+  
   <body>
-    <h1>Hello, world!</h1>
+      <!-- header -->
+      <header>
+          <!-- navbar -->
+          <!-- profile pic -->
+      </header>
+      <!-- main -->
+      <main>
+          <!-- section portfolio -->
+          <section></section>
+          <!-- section about-->
+          <section></section>
+          <!-- contact me -->
+          <section></section>
+      </main>
+      <!-- footer -->
+      <footer></footer>
 
 
     <script
