--- a/index.html
+++ b/index.html
@@ -15,25 +15,49 @@
 
     <title>Bootstrap Freelancer</title>
   </head>
-  
-  <body>
-      <!-- header -->
-      <header>
-          <!-- navbar -->
-          <!-- profile pic -->
-      </header>
-      <!-- main -->
-      <main>
-          <!-- section portfolio -->
-          <section></section>
-          <!-- section about-->
-          <section></section>
-          <!-- contact me -->
-          <section></section>
-      </main>
-      <!-- footer -->
-      <footer></footer>
 
+  <body>
+    <!-- header -->
+    <header>
+      <!-- navbar -->
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <!-- logo -->
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled">Disabled</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!-- profile pic -->
+    </header>
+    <!-- main -->
+    <main>
+      <!-- section portfolio -->
+      <section></section>
+      <!-- section about-->
+      <section></section>
+      <!-- contact me -->
+      <section></section>
+    </main>
+    <!-- footer -->
+    <footer></footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
