add profile pic

--- a/index.html
+++ b/index.html
@@ -48,6 +48,17 @@
         </div>
       </nav>
       <!-- profile pic -->
+      <section>
+          <div class="container-fluid">
+              <div class="row bg-info text-center">
+                  <div class="py-5">
+                      <h1>Pinco Pallo</h1>
+                      <img class="col-4 img-fluid" src="img/profile_pic.svg" alt="profile-pic">
+                      <h5 class="text-uppercase text-secondary">Web designer</h5>
+                  </div>
+              </div>
+          </div>
+      </section>
     </header>
     <!-- main -->
     <main>
