--- a/index.html
+++ b/index.html
@@ -63,7 +63,67 @@
     <!-- main -->
     <main>
       <!-- section portfolio -->
-      <section></section>
+      <section>
+          <div class="container">
+              <h3 class="text-center text-uppercase mt-5">portfolio</h3>
+              <div class="row justify-content-center">
+                  <!-- card 1 -->
+                  <div class="col-4 mb-3">
+                      <div class="text-center border rounded">
+                            <img class="img-fluid rounded-top" src="img/cabin.png" alt="Cabin">
+                            <h6 class="pt-3 pb-2">Cabin Website</h6>
+                            <a class="btn btn-info mb-3 fw-bold" href="#">Preview</a>
+                            <a class="btn btn-outline-info mb-3 fw-bold" href="#">Visit site</a>
+                      </div>
+                  </div>
+                  <!-- card 2 -->
+                  <div class="col-4 mb-3">
+                    <div class="text-center border rounded">
+                          <img class="img-fluid rounded-top" src="img/cabin.png" alt="Cabin">
+                          <h6 class="pt-3 pb-2">Cabin Website</h6>
+                          <a class="btn btn-info mb-3 fw-bold" href="#">Preview</a>
+                          <a class="btn btn-outline-info mb-3 fw-bold" href="#">Visit site</a>
+                    </div>
+                </div>
+                <!-- card 3 -->
+                <div class="col-4 mb-3">
+                    <div class="text-center border rounded">
+                          <img class="img-fluid rounded-top" src="img/cabin.png" alt="Cabin">
+                          <h6 class="pt-3 pb-2">Cabin Website</h6>
+                          <a class="btn btn-info mb-3 fw-bold" href="#">Preview</a>
+                          <a class="btn btn-outline-info mb-3 fw-bold" href="#">Visit site</a>
+                    </div>
+                </div>
+                <!-- card 4 -->
+                <div class="col-4 mb-3">
+                    <div class="text-center border rounded">
+                          <img class="img-fluid rounded-top" src="img/cabin.png" alt="Cabin">
+                          <h6 class="pt-3 pb-2">Cabin Website</h6>
+                          <a class="btn btn-info mb-3 fw-bold" href="#">Preview</a>
+                          <a class="btn btn-outline-info mb-3 fw-bold" href="#">Visit site</a>
+                    </div>
+                </div>
+                <!-- card 5 -->
+                <div class="col-4 mb-3">
+                    <div class="text-center border rounded">
+                          <img class="img-fluid rounded-top" src="img/cabin.png" alt="Cabin">
+                          <h6 class="pt-3 pb-2">Cabin Website</h6>
+                          <a class="btn btn-info mb-3 fw-bold" href="#">Preview</a>
+                          <a class="btn btn-outline-info mb-3 fw-bold" href="#">Visit site</a>
+                    </div>
+                </div>
+                <!-- card 6 -->
+                <div class="col-4 mb-3">
+                    <div class="text-center border rounded">
+                          <img class="img-fluid rounded-top" src="img/cabin.png" alt="Cabin">
+                          <h6 class="pt-3 pb-2">Cabin Website</h6>
+                          <a class="btn btn-info mb-3 fw-bold" href="#">Preview</a>
+                          <a class="btn btn-outline-info mb-3 fw-bold" href="#">Visit site</a>
+                    </div>
+                </div>
+              </div>
+          </div>
+      </section>
       <!-- section about-->
       <section></section>
       <!-- contact me -->
