--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                   <!-- card 2 -->
                   <div class="col-4 mb-3">
                     <div class="text-center border rounded">
-                          <img class="img-fluid rounded-top" src="img/cabin.png" alt="Cabin">
-                          <h6 class="pt-3 pb-2">Cabin Website</h6>
+                          <img class="img-fluid rounded-top" src="img/cake.png" alt="Cake">
+                          <h6 class="pt-3 pb-2">Cake Website</h6>
                           <a class="btn btn-info mb-3 fw-bold" href="#">Preview</a>
                           <a class="btn btn-outline-info mb-3 fw-bold" href="#">Visit site</a>
                     </div>
@@ -88,8 +88,8 @@
                 <!-- card 3 -->
                 <div class="col-4 mb-3">
                     <div class="text-center border rounded">
-                          <img class="img-fluid rounded-top" src="img/cabin.png" alt="Cabin">
-                          <h6 class="pt-3 pb-2">Cabin Website</h6>
+                          <img class="img-fluid rounded-top" src="img/circus.png" alt="Circus">
+                          <h6 class="pt-3 pb-2">Circus Website</h6>
                           <a class="btn btn-info mb-3 fw-bold" href="#">Preview</a>
                           <a class="btn btn-outline-info mb-3 fw-bold" href="#">Visit site</a>
                     </div>
@@ -97,8 +97,8 @@
                 <!-- card 4 -->
                 <div class="col-4 mb-3">
                     <div class="text-center border rounded">
-                          <img class="img-fluid rounded-top" src="img/cabin.png" alt="Cabin">
-                          <h6 class="pt-3 pb-2">Cabin Website</h6>
+                          <img class="img-fluid rounded-top" src="img/game.png" alt="Game">
+                          <h6 class="pt-3 pb-2">Game Website</h6>
                           <a class="btn btn-info mb-3 fw-bold" href="#">Preview</a>
                           <a class="btn btn-outline-info mb-3 fw-bold" href="#">Visit site</a>
                     </div>
@@ -106,8 +106,8 @@
                 <!-- card 5 -->
                 <div class="col-4 mb-3">
                     <div class="text-center border rounded">
-                          <img class="img-fluid rounded-top" src="img/cabin.png" alt="Cabin">
-                          <h6 class="pt-3 pb-2">Cabin Website</h6>
+                          <img class="img-fluid rounded-top" src="img/safe.png" alt="Safe">
+                          <h6 class="pt-3 pb-2">Safe Website</h6>
                           <a class="btn btn-info mb-3 fw-bold" href="#">Preview</a>
                           <a class="btn btn-outline-info mb-3 fw-bold" href="#">Visit site</a>
                     </div>
@@ -115,8 +115,8 @@
                 <!-- card 6 -->
                 <div class="col-4 mb-3">
                     <div class="text-center border rounded">
-                          <img class="img-fluid rounded-top" src="img/cabin.png" alt="Cabin">
-                          <h6 class="pt-3 pb-2">Cabin Website</h6>
+                          <img class="img-fluid rounded-top" src="img/submarine.png" alt="Submarine">
+                          <h6 class="pt-3 pb-2">Submarine Website</h6>
                           <a class="btn btn-info mb-3 fw-bold" href="#">Preview</a>
                           <a class="btn btn-outline-info mb-3 fw-bold" href="#">Visit site</a>
                     </div>
