--- a/index.html
+++ b/index.html
@@ -125,7 +125,19 @@
           </div>
       </section>
       <!-- section about-->
-      <section></section>
+      <section>
+          <div class="container-fluid bg-info mt-5 py-5">
+              <h4 class="text-uppercase text-center">about</h4>
+              <div class="row justify-content-center">
+                    <div class="col-5">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, quam. Velit hic porro qui doloremque modi! Deleniti fuga odit quibusdam ullam repudiandae nulla, corporis magni quisquam rem, amet mollitia quae.</p>
+                    </div>
+                    <div class="col-5">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, quam. Velit hic porro qui doloremque modi! Deleniti fuga odit quibusdam ullam repudiandae nulla, corporis magni quisquam rem, amet mollitia quae.</p>
+                    </div>
+              </div>
+          </div>
+      </section>
       <!-- contact me -->
       <section></section>
     </main>
