add struttura form

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <!-- section about-->
       <section>
           <div class="container-fluid bg-info mt-5 py-5">
-              <h4 class="text-uppercase text-center">about</h4>
+              <h3 class="text-uppercase text-center">about</h3>
               <div class="row justify-content-center">
                     <div class="col-5">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, quam. Velit hic porro qui doloremque modi! Deleniti fuga odit quibusdam ullam repudiandae nulla, corporis magni quisquam rem, amet mollitia quae.</p>
@@ -139,7 +139,27 @@
           </div>
       </section>
       <!-- contact me -->
-      <section></section>
+      <section>
+          <div class="container mt-5">
+              <h3 class="text-uppercase text-center">contact me</h3>
+              <form action="#">
+                  <div class="row">
+                      <!-- first name -->
+                      <div class="col-6"></div>
+                      <!-- last name -->
+                      <div class="col-6"></div>
+                      <!-- email address -->
+                      <div class="col-6"></div>
+                      <!-- phone number -->
+                      <div class="col-6"></div>
+                      <!-- message -->
+                      <div class="col"></div>
+                      <!-- button -->
+                      <div class="col-12"></div>
+                  </div>
+              </form>
+          </div>
+      </section>
     </main>
     <!-- footer -->
     <footer></footer>
