--- a/index.html
+++ b/index.html
@@ -181,7 +181,20 @@
       </section>
     </main>
     <!-- footer -->
-    <footer></footer>
+    <footer>
+        <section>
+            <div class="container-fluid">
+                <div class="row bg-dark">
+                    <!-- location -->
+                    <div class="col-6"></div>
+                    <!-- around the web -->
+                    <div class="col-6"></div>
+                    <!-- copyright -->
+                    <div class="col"></div>
+                </div>
+            </div>
+        </section>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
