add fixed footer

--- a/index.html
+++ b/index.html
@@ -184,13 +184,22 @@
     <footer>
         <section>
             <div class="container-fluid">
-                <div class="row bg-dark">
+                <div class="row bg-dark pt-5">
                     <!-- location -->
-                    <div class="col-6"></div>
+                    <div class="col-6 text-secondary text-center">
+                        <h4>LOCATION</h4>
+                        <div class="p-3">2215 John Daniel Drive</div>
+                        <div>Clark, MO 65243</div>
+                    </div>
                     <!-- around the web -->
-                    <div class="col-6"></div>
+                    <div class="col-6 text-secondary text-center">
+                        <h4>AROUND THE WEB</h4>
+                        <a class="text-info p-3" href="#">www.pincopallo.com</a>
+                    </div>
                     <!-- copyright -->
-                    <div class="col"></div>
+                    <div class="col-12 text-secondary text-center">
+                        <div class="fs-6 mb-5">Copyright &copy; Your Website 2022</div>
+                    </div>
                 </div>
             </div>
         </section>
