fixed header-copyright size

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
       <!-- profile pic -->
       <section>
           <div class="container-fluid">
-              <div class="row bg-info text-center">
-                  <div class="py-5">
+              <div class="row bg-info text-center justify-content-center">
+                  <div class="py-5 col-2">
                       <h1>Pinco Pallo</h1>
-                      <img class="col-4 img-fluid" src="img/profile_pic.svg" alt="profile-pic">
+                      <img class="img-fluid" src="img/profile_pic.svg" alt="profile-pic">
                       <h5 class="text-uppercase text-secondary">Web designer</h5>
                   </div>
               </div>
@@ -198,7 +198,7 @@
                     </div>
                     <!-- copyright -->
                     <div class="col-12 text-secondary text-center">
-                        <div class="fs-6 mb-5">Copyright &copy; Your Website 2022</div>
+                        <div class="fs-6 mb-5"><small>Copyright &copy; Your Website 2022</small></div>
                     </div>
                 </div>
             </div>
