--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
                 <a class="nav-link active text-info" aria-current="page" href="#">HOME</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-info" href="#">PORTFOLIO</a>
+                <a class="nav-link text-info" href="#portfolio">PORTFOLIO</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-info" href="#">ABOUT</a>
+                <a class="nav-link text-info" href="#about">ABOUT</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled text-info">CONTACT ME</a>
+                <a class="nav-link text-info" href="#contact">CONTACT ME</a>
               </li>
             </ul>
           </div>
@@ -63,7 +63,7 @@
     <!-- main -->
     <main>
       <!-- section portfolio -->
-      <section>
+      <section id="portfolio">
           <div class="container">
               <h3 class="text-center text-uppercase mt-5">portfolio</h3>
               <div class="row justify-content-center">
@@ -125,7 +125,7 @@
           </div>
       </section>
       <!-- section about-->
-      <section>
+      <section id="about">
           <div class="container-fluid bg-info mt-5 py-5">
               <h3 class="text-uppercase text-center">about</h3>
               <div class="row justify-content-center">
@@ -139,7 +139,7 @@
           </div>
       </section>
       <!-- contact me -->
-      <section>
+      <section id="contact">
           <div class="container my-5">
               <h3 class="text-uppercase text-center mb-4">contact me</h3>
               <form action="#">
