add responsive cards

--- a/BONUS/index.html
+++ b/BONUS/index.html
@@ -20,7 +20,7 @@
     <!-- header -->
     <header>
       <!-- navbar -->
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
           <!-- logo -->
         <div class="container-fluid">
           <a class="navbar-brand" href="#"><img src="img/logo.png" alt="logo"></a>
@@ -50,8 +50,8 @@
       <!-- profile pic -->
       <section>
           <div class="container-fluid">
-              <div class="row bg-info text-center justify-content-center">
-                  <div class="py-5 col-2">
+              <div class="row bg-info text-center justify-content-center mt-5">
+                  <div class="py-5 col-4">
                       <h1>Pinco Pallo</h1>
                       <img class="img-fluid" src="img/profile_pic.svg" alt="profile-pic">
                       <h5 class="text-uppercase text-secondary">Web designer</h5>
@@ -63,12 +63,12 @@
     <!-- main -->
     <main>
       <!-- section portfolio -->
-      <section id="portfolio">
+      <section id="portfolio" class="mt-5">
           <div class="container">
-              <h3 class="text-center text-uppercase mt-5">portfolio</h3>
+              <h3 class="text-center text-uppercase">portfolio</h3>
               <div class="row justify-content-center">
                   <!-- card 1 -->
-                  <div class="col-4 mb-3">
+                  <div class="col-12 col-md-6 col-lg-4 mb-3">
                       <div class="text-center border rounded">
                             <img class="img-fluid rounded-top" src="img/cabin.png" alt="Cabin">
                             <h6 class="pt-3 pb-2">Cabin Website</h6>
@@ -77,7 +77,7 @@
                       </div>
                   </div>
                   <!-- card 2 -->
-                  <div class="col-4 mb-3">
+                  <div class="col-12 col-md-6 col-lg-4 mb-3">
                     <div class="text-center border rounded">
                           <img class="img-fluid rounded-top" src="img/cake.png" alt="Cake">
                           <h6 class="pt-3 pb-2">Cake Website</h6>
@@ -86,7 +86,7 @@
                     </div>
                 </div>
                 <!-- card 3 -->
-                <div class="col-4 mb-3">
+                <div class="col-12 col-md-6 col-lg-4 mb-3">
                     <div class="text-center border rounded">
                           <img class="img-fluid rounded-top" src="img/circus.png" alt="Circus">
                           <h6 class="pt-3 pb-2">Circus Website</h6>
@@ -95,7 +95,7 @@
                     </div>
                 </div>
                 <!-- card 4 -->
-                <div class="col-4 mb-3">
+                <div class="col-12 col-md-6 col-lg-4 mb-3">
                     <div class="text-center border rounded">
                           <img class="img-fluid rounded-top" src="img/game.png" alt="Game">
                           <h6 class="pt-3 pb-2">Game Website</h6>
@@ -104,7 +104,7 @@
                     </div>
                 </div>
                 <!-- card 5 -->
-                <div class="col-4 mb-3">
+                <div class="col-12 col-md-6 col-lg-4 mb-3">
                     <div class="text-center border rounded">
                           <img class="img-fluid rounded-top" src="img/safe.png" alt="Safe">
                           <h6 class="pt-3 pb-2">Safe Website</h6>
@@ -113,7 +113,7 @@
                     </div>
                 </div>
                 <!-- card 6 -->
-                <div class="col-4 mb-3">
+                <div class="col-12 col-md-6 col-lg-4 mb-3">
                     <div class="text-center border rounded">
                           <img class="img-fluid rounded-top" src="img/submarine.png" alt="Submarine">
                           <h6 class="pt-3 pb-2">Submarine Website</h6>
