--- a/BONUS/index.html
+++ b/BONUS/index.html
@@ -129,10 +129,10 @@
           <div class="container-fluid bg-info mt-5 py-5">
               <h3 class="text-uppercase text-center">about</h3>
               <div class="row justify-content-center">
-                    <div class="col-5">
+                    <div class="col-12 col-md-5">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, quam. Velit hic porro qui doloremque modi! Deleniti fuga odit quibusdam ullam repudiandae nulla, corporis magni quisquam rem, amet mollitia quae.</p>
                     </div>
-                    <div class="col-5">
+                    <div class="col-12 col-md-5">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, quam. Velit hic porro qui doloremque modi! Deleniti fuga odit quibusdam ullam repudiandae nulla, corporis magni quisquam rem, amet mollitia quae.</p>
                     </div>
               </div>
