add responsive section contact me

--- a/BONUS/index.html
+++ b/BONUS/index.html
@@ -145,22 +145,22 @@
               <form action="#">
                   <div class="row">
                       <!-- first name -->
-                      <div class="col-6">
+                      <div class="col-12 col-md-6">
                           <label class="form-label fw-bold" for="first-name">First name</label>
                           <input class="form-control" type="text" id="first-name" placeholder="Enter your first name..." required>
                       </div>
                       <!-- last name -->
-                      <div class="col-6">
+                      <div class="col-12 col-md-6">
                         <label class="form-label fw-bold" for="last-name">Last name</label>
                         <input class="form-control" type="text" id="last-name" placeholder="Enter your last name..." required>
                       </div>
                       <!-- email address -->
-                      <div class="col-6">
+                      <div class="col-12 col-md-6">
                         <label class="form-label fw-bold mt-3" for="email">Email address</label>
                         <input class="form-control" type="text" id="email" placeholder="Enter your e-mail..." required>
                       </div>
                       <!-- phone number -->
-                      <div class="col-6">
+                      <div class="col-12 col-md-6">
                         <label class="form-label fw-bold mt-3" for="phone">Phone number</label>
                         <input class="form-control" type="text" id="phone" placeholder="(123) 1234 5677" required>
                       </div>
