--- a/BONUS/index.html
+++ b/BONUS/index.html
@@ -186,18 +186,18 @@
             <div class="container-fluid">
                 <div class="row bg-dark pt-5">
                     <!-- location -->
-                    <div class="col-6 text-secondary text-center">
+                    <div class="col-12 col-md-6 text-secondary text-center mt-2">
                         <h4>LOCATION</h4>
-                        <div class="p-3">2215 John Daniel Drive</div>
+                        <div class="p-2">2215 John Daniel Drive</div>
                         <div>Clark, MO 65243</div>
                     </div>
                     <!-- around the web -->
-                    <div class="col-6 text-secondary text-center">
+                    <div class="col-12 col-md-6 text-secondary text-center mt-2">
                         <h4>AROUND THE WEB</h4>
                         <a class="text-info p-3" href="#">www.pincopallo.com</a>
                     </div>
                     <!-- copyright -->
-                    <div class="col-12 text-secondary text-center">
+                    <div class="col-12 text-secondary text-center mt-2">
                         <div class="fs-6 mb-5"><small>Copyright &copy; Your Website 2022</small></div>
                     </div>
                 </div>
