piccolo fix profile pic - bonus completato

--- a/BONUS/index.html
+++ b/BONUS/index.html
@@ -51,7 +51,7 @@
       <section>
           <div class="container-fluid">
               <div class="row bg-info text-center justify-content-center mt-5">
-                  <div class="py-5 col-4">
+                  <div class="py-5 col-4 col-md-2">
                       <h1>Pinco Pallo</h1>
                       <img class="img-fluid" src="img/profile_pic.svg" alt="profile-pic">
                       <h5 class="text-uppercase text-secondary">Web designer</h5>
